Mobile layout issue fix

--- a/src/app/components/showpcmtesting/showpcmtesting.component.scss
+++ b/src/app/components/showpcmtesting/showpcmtesting.component.scss
@@ -41,6 +41,7 @@
 .tc-nav{
     display: flex;
     min-height: 10%;
+    height: 10%;
     width: 100%;
     order: 2;
     padding: 3px 30px;
