--- a/src/app/tests/auditory/auditory.component.scss
+++ b/src/app/tests/auditory/auditory.component.scss
@@ -124,11 +124,25 @@
         bottom: 0px;
         padding: 22px 0;
         background-color: #F4F4F4;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
     }
     .answer-div .col-4{
         padding: 0;
     }
     .answer-div .p_design{
         margin: 1px;
+    }
+    .var-item{
+        flex: 0 0 66.66666%;
+        max-width: 66.66666%;
+    }
+    .var-text{
+        font-size: 30px;
+        padding-bottom: 6px;
+    }
+    .answer-div {
+        top: 36%;
     }
 }
