--- a/src/app/tests/spelling/spelling.component.scss
+++ b/src/app/tests/spelling/spelling.component.scss
@@ -171,6 +171,16 @@
         margin-left: 2px;
         font-size: 32px;
     }
+    .testing-vars{
+        flex-flow: column wrap;
+    }
+    .var-item{
+        flex: 0 0 66.66666%;
+        max-width: 66.66666%;
+    }
+    .var-text{
+        font-size: 30px;
+    }
 }
 
 
